--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -12,3 +12,10 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+
+      - name: print date
+        run: date
+      
+      - name: directory
+        run: ls -l
+    
